# poc-documents

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: main.yml
config/: default.yml
src/: main.rs  settings.rs
src/app/services/sftp/: mod.rs
src/core/: custom_error.rs  mod.rs
src/core/services/: mod.rs
